# tibco-to-spring

./: .gitignore  README.md  pyproject.toml  trained_agents_data.pkl  training_data.pkl
docs/: run_process_diagram.md  train_process_diagram.md
outputs/: bash_script.sh  bash_script_fintech_transaction_processor.sh
outputs/springBootProject/: bash_script.sh
src/tibco_to_spring/: crew.py  local_vector_memory.py  logging_config.py  main.py
src/tibco_to_spring/.db/: tibco_to_spring.db
src/tibco_to_spring/compact/: crew.py
src/tibco_to_spring/config/: agents.yaml  agents_asok.yaml  tasks.yaml  tasks_asok.yaml
src/tibco_to_spring/data/: tibco_credit_maintanence_project.txt  tibco_credit_maintanence_project_test.txt
tibco_samples/FintechTransactionProcessor/: project.xml
tibco_samples/FintechTransactionProcessor/processes/: EnrichTransaction.process  ErrorHandler.process  MainProcessor.process  PersistTransaction.process  ValidateTransaction.process
tibco_samples/FintechTransactionProcessor/resources/: config.properties  routingRules.xml
tibco_samples/FintechTransactionProcessor/schemas/: EnrichedTransaction.xsd  ErrorPayload.xsd  Transaction.xsd
tibco_samples/FintechTransactionProcessor/wsdl/: TransactionService.wsdl
tibco_samples/FintechTransactionProcessorAsString/: project_structure.txt
