[project]
name = "tibco_to_spring"
version = "0.1.0"
description = "tibco-to-spring using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.85.0,<1.0.0"
]

[project.scripts]
tibco_to_spring = "tibco_to_spring.main:run"
run_crew = "tibco_to_spring.main:run"
train = "tibco_to_spring.main:train"
replay = "tibco_to_spring.main:replay"
test = "tibco_to_spring.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
